# snippetlibrary

./: Cargo.toml  build.rs
resources/: resources.gresource  resources.gresource.xml  resources.xml  stringlength.ui
src/: lib.rs  main.rs
src/snippet_object/: imp.rs  mod.rs
src/snippet_row/: imp.rs  mod.rs  snippet_row.ui
src/todo_object/: mod.rs
src/views/: main.glade  resources.gresource  resources.xml
src/window/: imp.rs  mod.rs  window.ui
tests/: snippet_test.rs  snippetcollection_test.rs  test_functions.rs
