[package]
name = "snippetlibrary"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio="*"
glib="*"
sourceview = "0.9.0"
rusqlite="*"

[dependencies.gtk]
version = "*"
package = "gtk"

[dev-dependencies]
tempfile = "*"
filepath="*"