[package]
name = "snippetlibrary"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio="*"
glib="*"
#sourceview = { version = "0.9", features = ["v3_22"] }
rusqlite="*"
atk="*"
lazy_static="*"

#[dependencies.gtk]
#version = "0.9"
#features = ["v3_22"]

[dependencies.gtk]
version="0.14.0"

[dev-dependencies]
tempfile = "*"
filepath="*"
