[package]
name = "snippetlibrary"
version = "0.1.0"
edition = "2021"


[dependencies]
sourceview5="*"
chrono = "0.4.19"
once_cell = "1.5"
glium = { version = "0.30.1", optional = true, default-features = false }
epoxy = { version = "0.1.0", optional = true }
libloading = { version = "0.7.0", optional = true }
lazy_static = "1.4.0"
copypasta="*"

[dependencies.gtk]
package="gtk4"